# ChangeLog for net-p2p/deluge
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.124 2009/05/25 18:04:58 armin76 Exp $

  25 May 2009; Raúl Porcel <armin76@gentoo.org> -deluge-1.1.3.ebuild,
  -deluge-1.1.4.ebuild, -deluge-1.1.5.ebuild, -deluge-1.1.6.ebuild,
  deluge-1.1.7.ebuild, deluge-9999.ebuild:
  Add libnotify USE-flag for bug #268056

*deluge-1.1.7 (27 Apr 2009)

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.7.ebuild:
  Version bump

*deluge-1.1.6 (07 Apr 2009)

  07 Apr 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.6.ebuild:
  Version bump

*deluge-1.1.5 (17 Mar 2009)

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.5.ebuild:
  Version bump

*deluge-1.1.4 (09 Mar 2009)

  09 Mar 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.4.ebuild:
  Version bump

  07 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> deluge-0.5.9.3.ebuild,
  deluge-1.0.7-r1.ebuild, deluge-9999.ebuild:
  Remove built_with_use calls on boost by depending on new enough versions
  that always have threads.

  07 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  -deluge-1.1.0-r1.ebuild, -deluge-1.1.1.ebuild, -deluge-1.1.2.ebuild:
  Remove old versions.

  19 Feb 2009; Raúl Porcel <armin76@gentoo.org> deluge-9999.ebuild:
  Fix deps

  17 Feb 2009; Raúl Porcel <armin76@gentoo.org> files/deluged.init:
  add DELUGED_HOME support in config, wrt bug #259278, thanks to Maks
  Polunin <ph0enix at ngs dot ru>

*deluge-1.1.3 (16 Feb 2009)

  16 Feb 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.3.ebuild:
  Version bump

  12 Feb 2009; Raúl Porcel <armin76@gentoo.org> deluge-9999.ebuild:
  Add new deps to svn ebuild, bug #258284

*deluge-1.1.2 (12 Feb 2009)

  12 Feb 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.2.ebuild:
  Version bump

*deluge-1.1.1 (25 Jan 2009)

  25 Jan 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.1.ebuild:
  Version bump
