@@ -3,9 +3,11 @@ AUX deluged.init 2187 RMD160 6283e0f053c70c8ebbf19475db0da86313a027cc SHA1 408f2
 DIST deluge-0.5.9.3.tar.gz 2215212 RMD160 a18f93bacba20cfbe97272a83c5d11e62f2b418b SHA1 5f3ca7bca298c335f1600d7787b1478577afadd5 SHA256 30e62996cdcb689a5f552432b286f392fa2e855a768e279b3390c0cdd090f251
 DIST deluge-1.0.7.tar.gz 2577764 RMD160 b980ab82e67aabdbe180d32e8a1c5e175501fbd3 SHA1 c601a0af4fd5c2fdf7b50eb6af2ddafcff58bfaa SHA256 0ae866dd344003e179d67a4dff2d5bed2817f7b4ecadd3ca80635c9f9ed1cfcd
 DIST deluge-1.1.7.tar.lzma 1704649 RMD160 d61479c8964cfb7fd3c078bb340385c6574817e9 SHA1 e759da14ed084b4f3b9edd6ea6268f9d079c714f SHA256 87206d7f4eb9f6c6825dfc453d180cbb8ad4bb6015d36679006482e7ee729818
+DIST deluge-1.1.8.tar.lzma 1693906 RMD160 339c3696c71ed3ae9cb3c22b6bde4543010529d5 SHA1 7222a1b8fbdb9dd3f794373be2dccf54e6360aa3 SHA256 57699a48db8885d9f5a8ed944d638d3b6a4953c985e8a91299df968ce2e410d8
 EBUILD deluge-0.5.9.3.ebuild 1164 RMD160 1f5d5838172358dd4ee9196c708226e8770aa516 SHA1 3d3b7a5d926bf2ac01f0def1bbfe34c158e33c23 SHA256 087ec0a9e47d25137ce87944502e9c650d414ba56a0b790d57799195ecbffe2e
 EBUILD deluge-1.0.7-r1.ebuild 1536 RMD160 120014ec59c8004285b3f301f3ab5000f1487bab SHA1 a68d4385b9a59e9a564808e98d813f16b52ccc72 SHA256 7ed7ca5983081d6870bea90fcc4acfa00a2049cb05f271c6688cdfbeb45be594
 EBUILD deluge-1.1.7.ebuild 1629 RMD160 27c109f85222f7f2cc30866e00bfefc472529404 SHA1 07f1008d85c6d3c99889f0c41dda5ef361f86009 SHA256 e8c8440c15437cbda54eb8f8268f784467af3e0e236d0d46ee9b458861cd3f1b
+EBUILD deluge-1.1.8.ebuild 1627 RMD160 0d40b463fe9c0bb6812aff43ffde4584a59c7cce SHA1 b7ba856d0e471398969862b90d0eae819882c603 SHA256 9a05668ffa29fe88320c5339b621dae002b43dcd2c8c4b44a268db2bbf400128
 EBUILD deluge-9999.ebuild 1686 RMD160 f8166a67afbe46410e6358722a8d2794f69023e5 SHA1 f2edac92d0c72f1aa335f8b8d1e35d4934c62533 SHA256 557162cc62663e9a652779e0630b174c00eb5cb7ea8e192623c18a00e59e579b
-MISC ChangeLog 17557 RMD160 b38503e9533c8a59964d83050093d4302fe4b401 SHA1 d93143708137b19764c4a8c3b59285422bc6c9e7 SHA256 ce8c3a3a9883d6eda0a786d6778ddd8e49ed279d124225d4ed7fc3cee0914399
+MISC ChangeLog 17673 RMD160 ff979f41f4c99db012b444902a4aa8e2ca1b5176 SHA1 d311e48618178de94110a9721b1874601088a8ae SHA256 d6669d710464a1c963be6351fa219de81fae10d817f2b1b8a059158c7cfa9c09
 MISC metadata.xml 222 RMD160 0dc4b04f31dcc89402f87c352327fe327b3cf31f SHA1 540337d5841f15b43186e5858f9e24032567de08 SHA256 713b9d1548682d5c1c3686a7b0711acf065a8fa4f386883ace90359d3dceb966
