@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/deluge
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.124 2009/05/25 18:04:58 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.125 2009/05/31 16:28:43 armin76 Exp $
+
+*deluge-1.1.8 (31 May 2009)
+
+  31 May 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.8.ebuild:
+  Version bump
 
   25 May 2009; Raúl Porcel <armin76@gentoo.org> -deluge-1.1.3.ebuild,
   -deluge-1.1.4.ebuild, -deluge-1.1.5.ebuild, -deluge-1.1.6.ebuild,
